replaced the deprecated 'new URL()'; plus some automatic formating changes